syntax = "proto3";

package auth;
option go_package = "baboha.sso.v1;ssov1";
import "google/api/annotations.proto";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
      additional_bindings {
        post: "/auth/login"
        body: "*"
      }
    };
  }
  rpc Login (LoginRequest) returns (LoginResponce);
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponce);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  int64 user_id = 1;
}
message LoginRequest {
  string email = 1;
  string password = 2;
  int32 app_id = 3;
}
message LoginResponce{
  string token = 1;
}
message IsAdminRequest {
  int64 user_id = 1;
}
message IsAdminResponce {
  bool is_admin = 1;
}

